# autocontent

./: .gitignore
autocontent-pro/: index.html  package-lock.json  package.json  vite.config.ts
autocontent-pro/.github/workflows/: release.yml
autocontent-pro/docs/: development-roadmap.md  project-changelog.md  system-architecture.md
autocontent-pro/plans/reports/: PHASE6-TESTING-SUMMARY.md  code-reviewer-260319-phase1-2-review.md  code-reviewer-260319-phase3-veo3-review.md  docs-manager-260319-2211-mvp-completion-documentation.md  project-manager-260319-1817-phase1-2-completion-summary.md  tester-260319-1942-phase6-subtitle.md  tester-260319-2008-batch-processing-phase8.md  tester-260319-phase04-account-management.md  tester-260319-phase05-video-processing-pipeline.md  tester-260319-phase1-2-verification.md  tester-260319-phase3-veo3-verification.md  tester-260319-phase9-browser-automation.md  tester-phase7-drive.md  tester-phase7-summary.md
autocontent-pro/puppeteer-sidecar/: package.json
autocontent-pro/puppeteer-sidecar/src/: cookie-capture-handler.js  index.js  stealth-config-handler.js
autocontent-pro/src/: App.tsx  index.css
autocontent-pro/src-tauri/: Cargo.toml  tauri.conf.json
autocontent-pro/src-tauri/binaries/: puppeteer-sidecar-x86_64-pc-windows-msvc.exe.cmd
autocontent-pro/src-tauri/capabilities/: default.json
autocontent-pro/src-tauri/icons/: icon.icns
autocontent-pro/src-tauri/src/: lib.rs  main.rs
autocontent-pro/src-tauri/src/commands/: accounts.rs  batch.rs  browser.rs  cookies.rs  drive.rs  mod.rs  proxy.rs  subtitle.rs  veo3.rs  video.rs
autocontent-pro/src-tauri/src/db/: mod.rs
autocontent-pro/src-tauri/src/db/migrations/: 001_create_video_jobs.sql  002_create_accounts.sql
autocontent-pro/src-tauri/src/models/: account.rs  batch_job.rs  browser.rs  mod.rs  video_job.rs
autocontent-pro/src-tauri/src/services/: batch_manager.rs  browser_manager.rs  crypto.rs  drive_client.rs  ffmpeg.rs  gemini_client.rs  image_upload_handler.rs  job_dispatcher.rs  mod.rs  oauth.rs  proxy.rs  proxy_api_client.rs  sidecar_client.rs  upscaler.rs  whisper.rs
autocontent-pro/src/hooks/: use-accounts.ts  use-tauri-invoke.ts  use-veo3-generation.ts
autocontent-pro/src/lib/: route-definitions.ts  tauri-api.ts
autocontent-pro/src/pages/: accounts-page.tsx  batch-processing-page.tsx  dashboard-page.tsx  google-drive-page.tsx  logs-page.tsx  settings-page.tsx  video-generate-page.tsx
docs/: code-standards.md  development-roadmap.md  project-changelog.md  project-overview-pdr.md  system-architecture.md
family-maid-internal/: .env.example  .gitignore  package.json  pnpm-lock.yaml
family-maid-internal/apps/api/: Dockerfile  package.json  tsconfig.json
family-maid-internal/apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
family-maid-internal/infrastructure/: docker-compose.yml
family-maid-internal/plans/260305-0001-review-and-optimize/: phase-01-bug-fixes-and-quick-wins.md  phase-02-case-detail-page-with-status-change-and-ctv-assign.md  phase-03-customer-and-ctv-detail-pages.md  plan.md  (+2 more)
(+190 files in other folders)
