[package]
name = "autocontent-pro"
version = "0.1.0"
description = "Cross-platform desktop app for AI video generation"
authors = ["AutoContent Pro"]
edition = "2021"

[lib]
name = "autocontent_pro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "process"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
open = "5"
axum = { version = "0.7", features = ["tokio"] }
urlencoding = "2"
hostname = "0.4"
tempfile = "3"
mime_guess = "2"
chromiumoxide = { version = "0.9", default-features = false }
futures = "0.3"
